--- a/src/App.css
+++ b/src/App.css
@@ -18,8 +18,17 @@
   font-size: large;
 }
 
+.about {
+  padding-bottom: 100px;
+}
+
 .project{
   padding-bottom: 100px;
+}
+
+.icons{
+  padding: 10px;
+  color: #222;
 }
 
 @keyframes App-logo-spin {
