--- a/src/App.css
+++ b/src/App.css
@@ -1,37 +1,20 @@
-.App {
-  text-align: center;
+.main {
+  margin-bottom: 80px;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-.about {
+.project {
   padding-bottom: 100px;
 }
 
-.project{
-  padding-bottom: 100px;
-}
-
-.icons{
+.icons {
   padding: 10px;
   color: #222;
 }
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.footer{
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 60px;
+  margin-top: 20px;
 }
